fixed footer horizontal emoji alignment

--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -6,6 +6,8 @@
 
 .footer__right {
     text-align: center;
+    display: flex;
+    align-items: center;
 }
 
 .footer__emoji-wrapper {
